--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -30,8 +30,7 @@ jobs:
                       files=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                           "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files?per_page=100" \
                           | jq -r '.[] | select(.status == "added" or .status == "modified") | .filename' \
-                          | grep 'domains/' \
-                          | grep '\.json$')
+                          | grep 'domains/.*\.json$')
                   else
                       files=$(git diff --name-only --diff-filter=AM "domains/" | grep '\.json$' || echo '')
                   fi
@@ -62,8 +61,17 @@ jobs:
                       files=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                           "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files?per_page=100" \
                           | jq -r '.[] | select(.status == "added" or .status == "modified") | .filename' \
-                          | grep 'domains/' \
-                          | grep '\.json$')
+                          | grep '^domains/[^/]*\.json$')
+                      page=2
+
+                      while [[ -n $files ]]; do
+                          additional_files=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+                              "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files?per_page=100&page=$page" \
+                              | jq -r '.[] | select(.status == "added" or .status == "modified") | .filename' \
+                              | grep '^domains/.*\.json$')
+                          files="$files"$'\n'"$additional_files"
+                          ((page++))
+                      done
                   else
                       files=$(git diff --name-only --diff-filter=AM "domains/" | grep '\.json$' || echo '')
                   fi
@@ -108,8 +116,7 @@ jobs:
                       files=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                           "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files?per_page=100" \
                           | jq -r '.[] | select(.status == "added" or .status == "modified") | .filename' \
-                          | grep 'domains/' \
-                          | grep '\.json$')
+                          | grep 'domains/.*\.json$')
                   else
                       files=$(git diff --name-only --diff-filter=AM "domains/" | grep '\.json$' || echo '')
                   fi
