--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -39,7 +39,7 @@ jobs:
             - name: Find Files
               id: find_files
               run: |
-                  if [[ ${{ github.event_name }} == 'pull_request' ]]; then
+                  if [[ "${{ github.event_name }}" == 'pull_request' ]]; then
                       files=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                           "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files?per_page=100" \
                           | jq -r '.[] | select(.status == "added" or .status == "modified") | .filename' \
