--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -56,7 +56,13 @@ jobs:
                       filename=$(basename "$file")
                       owner_email=$(jq -r '.owner.email' "$file")
 
-                      if ! email_validation_result=$(wdhdev/validate-email-action@main --email "$owner_email"); then
+                      echo "Validating $owner_email in $filename"
+
+                      wdhdev/validate-email-action@main --email "$owner_email" > validation_result.txt &
+                      validation_pid=$!
+                      wait $validation_pid
+
+                      if [[ $? -ne 0 ]]; then
                           echo "::error::FAIL $owner_email $filename"
                           echo "FAIL $owner_email $filename" >> failed_validations.txt
                       else
@@ -64,12 +70,23 @@ jobs:
                           echo "PASS $owner_email $filename" >> passed_validations.txt
                       fi
 
-                      echo "$email_validation_result"
+                      echo "$?"
                   done
 
                   if [[ -s failed_validations.txt ]]; then
                       exit 1
                   fi
+
+            - name: Results
+              run: |
+                  echo "Validation Results"
+                  echo "------------------"
+                  echo "Passed Validations"
+                  cat passed_validations.txt
+                  echo "------------------"
+                  echo "Failed Validations"
+                  cat failed_validations.txt
+                  echo "------------------"
 
     json:
         name: JSON
