--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -58,13 +58,18 @@ jobs:
 
                       echo "Validating $owner_email in $filename"
 
-                      if ! wait email_validation_result=$(wdhdev/validate-email-action@main --email "$owner_email"); then
+                      email_validation_result=$(wdhdev/validate-email-action@main --email "$owner_email")
+                      wait $email_validation_result
+
+                      if ! [[ $email_validation_result ]]; then
                           echo "::error::FAIL $owner_email $filename"
                           echo "FAIL $owner_email $filename" >> failed_validations.txt
                       else
                           echo "PASS $owner_email $filename"
                           echo "PASS $owner_email $filename" >> passed_validations.txt
                      fi
+
+                      echo "$email_validation_result"
                   done
 
                   if [[ -s failed_validations.txt ]]; then
