--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -58,7 +58,7 @@ jobs:
 
                       echo "Validating $email in $filename"
 
-                      result=$(npx wdhdev/validate-email-action@main --email "$email")
+                      result=$(npx github:wdhdev/validate-email-action@main --email "$email")
 
                       if [[ -z $result ]]; then
                           echo "::error::FAIL $email $filename"
