--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -60,14 +60,14 @@ jobs:
 
                       result=$(node scripts/validate-email/dist/index.js --email "$email")
 
-                      if [[ -z $result ]]; then
+                      if [[ "${result.success}" == "false" ]]; then
                           echo "::error::FAIL $email $filename"
                           echo "FAIL $email $filename" >> failed_validations.txt
+
+                          echo "$result"
                       else
                           echo "PASS $email $filename"
                       fi
-
-                      echo "$result"
                   done
 
                   if [[ -s failed_validations.txt ]]; then
