--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -61,7 +61,9 @@ jobs:
                       result=$(node scripts/validate-email/dist/index.js --email "$email")
                       echo "Raw response: $result"
 
+                      set -x  # Enable debugging mode
                       fixed_result=$(echo "$result" | jq '.')
+                      set +x  # Disable debugging mode
 
                       success=$(echo "$fixed_result" | jq -r '.success')
 
