--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -61,7 +61,7 @@ jobs:
                       result=$(node scripts/validate-email/dist/index.js --email "$email")
                       echo "Raw response: $result"
 
-                      fixed_result=$(echo "$result" | jq -R -s -c 'split("\n")')
+                      fixed_result=$(echo "$result" | jq '.' | tr -d "'")
 
                       success=$(echo "$fixed_result" | jq -r '.success')
 
