--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -61,16 +61,15 @@ jobs:
                       result=$(node scripts/validate-email/dist/index.js --email "$email")
                       echo "Raw response: $result"
 
-                      fixed_result=$(echo "$result" | jq '.' 2>&1)
-                      echo "Fixed result: $fixed_result"
+                      fixed_result=$(echo "$result" | jq '.' | tr -d "'")
 
                       success=$(echo "$fixed_result" | jq -r '.success')
 
-                      if [[ "$success" == "false" ]]; then
+                      if [[ "$success" == "true" ]]; then
+                          echo "PASS $email $filename"
+                      else
                           echo "::error::FAIL $email $filename"
                           echo "FAIL $email $filename" >> failed_validations.txt
-                      else
-                          echo "PASS $email $filename"
                       fi
                   done
 
